--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="index.js"></script>
 </body>
 <footer>
-  Made with ❤️ in Bihar.
+  Made with ❤️ for you from Bihar.
 </footer>
 
 
